tests/invalidTest/other/func_declare_twice.q
# EXPECT the function has been declared
def void errorTest(){

}
def void errorTest(){}